--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,33 @@
 {
-  "editor.formatOnSave": false,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
-  },
-  "eslint.useFlatConfig": true,
-  "eslint.validate": ["javascript", "typescript"],
-  "eslint.workingDirectories": [
-    { "mode": "auto" }
-  ],
-  "prettier.prettierPath": "./node_modules/prettier",
-  "prettier.printWidth": 140,
-  "prettier.semi": true,
-  "prettier.singleQuote": false
+    "editor.tabSize": 2,
+    "editor.insertSpaces": true,
+    "[json]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.fixAll.eslint": "explicit"
+        },
+        "files.insertFinalNewline": true
+    },
+    "[typescript]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.fixAll.eslint": "explicit"
+        }
+    },
+    "[javascript]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.fixAll.eslint": "explicit"
+        }
+    },
+    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
+    "[makefile]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 4
+    },
+    "[solidity]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "makefile.configureOnOpen": false
 }
