Fill out mainnet values, STILL need to separate API3 feeds

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "author": "dTRINITY",
   "license": "MIT",
   "packageManager": "yarn@4.5.0",
+  "scripts": {
+    "gas-estimate": "npx tsx scripts/mainnet-gas-estimation.ts",
+    "gas-estimate:help": "npx tsx scripts/mainnet-gas-estimation.ts --help"
+  },
   "devDependencies": {
     "@eslint/compat": "^1.2.6",
     "@eslint/eslintrc": "^3.2.0",
